# comp_646_project

./: .gitignore  AGENTS.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  README.md  multimodal_contradiction_deck.pptx  project_grading_criteria.txt  pyproject.toml  requirements.txt
ProgressReport/: egbib.bib  report.tex
artifacts/benchmark/final/: benchmark_coverage_final.csv  benchmark_final.csv
artifacts/benchmark/midscale/: audit_sheet_midscale.csv  benchmark_coverage_midscale.csv  family_manifest_midscale.csv
artifacts/benchmark/prototype/: audit_sheet_prototype.csv  benchmark_prototype.csv  (+2 more)
config/: defaults.yaml
configs/: default.yaml
docs/: development.md  implementation_plan.md
docs/submission/: project_grading_criteria.txt
notebooks/: multimodal_contradiction_project.ipynb
reports/final/: report.tex
src/multimodal_contradiction/: __init__.py  artifacts.py  benchmark.py  calibration.py  coco.py  config.py  evaluation.py  io_utils.py  metrics.py  models.py  plots.py  plotting.py  qwen.py  runtime.py  schemas.py  training.py
src/vl_contradiction/: __init__.py  audit.py  audit_automation.py  audit_ui.py  benchmark.py  clip_baselines.py  coco.py  config.py  labels.py  metrics.py  models.py  performance.py  plotting.py  qwen.py  reporting.py  runtime.py  training.py
tests/: test_vl_contradiction_audit.py  test_vl_contradiction_benchmark.py  test_vl_contradiction_clip_training_perf.py  test_vl_contradiction_config.py  test_vl_contradiction_plotting.py  test_vl_contradiction_qwen.py  test_vl_contradiction_runtime.py  test_vl_contradiction_training.py
(+1493 files in other folders)
